rpi5/bazarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  serviceName: bazarr
  template:
    metadata:
      name: bazarr
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.6.2@sha256:c1673816321156b904af9b7e6415ea547ae9622e4acc375358f1e1eb9ed1e904
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6767
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 6767
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
      restartPolicy: Always
      volumes:
        - name: data
          nfs:
            path: /
            server: 192.168.1.52
            readOnly: false
      securityContext:
        fsGroup: 3002
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
