rpi5/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bazarr.local`) || Host(`bazarr.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: oauth-bazarr
          port: 80
  tls:
    secretName: bazarr-cert-tls
    domains:
      - main: bazarr.local
        sans:
          - bazarr.internal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: bazarr
      port:
        number: 80
  tls:
    - hosts:
        - bazarr
